--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>enterprise-order</title>
   </head>
+  <style>
+  	body {
+  		margin: 0;
+  	}
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
