--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>enterprise-order</title>
+    <title>百味企业餐饮服务平台</title>
   </head>
   <style>
   	body {
